--- a/src/projects.json
+++ b/src/projects.json
@@ -1,58 +1,37 @@
 [
   {
     "id": 1,
-    "project": "Project 1",
-    "demo": "http://www.google.com",
-    "code": "http://www.google.com",
+    "project": "Beauty Parlour",
+    "demo": "https://parlour-sooty.vercel.app/",
+    "code": "https://github.com/romanpoudel/parlour",
     "src": "https://images.unsplash.com/photo-1575936123452-b67c3203c357?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
   },
   {
     "id": 2,
-    "project": "Project 2",
-    "demo": "http://www.google.com",
-    "code": "http://www.google.com",
+    "project": "Online Store",
+    "demo": "https://onlineshop-nu.vercel.app/",
+    "code": "https://github.com/romanpoudel/onlineshop",
     "src": "https://images.unsplash.com/photo-1575936123452-b67c3203c357?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
   },
   {
     "id": 3,
-    "project": "Project 3",
-    "demo": "http://www.google.com",
-    "code": "http://www.google.com",
+    "project": "Dictionary",
+    "demo": "https://dictionary-gold-seven.vercel.app/",
+    "code": "https://github.com/romanpoudel/dictionary",
     "src": "https://images.unsplash.com/photo-1575936123452-b67c3203c357?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
   },
   {
     "id": 4,
-    "project": "Project 4",
-    "demo": "http://www.google.com",
-    "code": "http://www.google.com",
+    "project": "Unsplash Image Search App",
+    "demo": "https://vercel.com/romanpoudel/unsplash-image-search-app",
+    "code": "https://github.com/romanpoudel/unsplash-image-search-app",
     "src": "https://images.unsplash.com/photo-1575936123452-b67c3203c357?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
   },
   {
     "id": 5,
-    "project": "Project 5",
-    "demo": "http://www.google.com",
-    "code": "http://www.google.com",
-    "src": "https://images.unsplash.com/photo-1575936123452-b67c3203c357?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-  },
-  {
-    "id": 6,
-    "project": "Project 6",
-    "demo": "http://www.google.com",
-    "code": "http://www.google.com",
-    "src": "https://images.unsplash.com/photo-1575936123452-b67c3203c357?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-  },
-  {
-    "id": 7,
-    "project": "Project 7",
-    "demo": "http://www.google.com",
-    "code": "http://www.google.com",
-    "src": "https://images.unsplash.com/photo-1575936123452-b67c3203c357?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-  },
-  {
-    "id": 8,
-    "project": "Project 8",
-    "demo": "http://www.google.com",
-    "code": "http://www.google.com",
+    "project": "Resi-Review",
+    "demo": "",
+    "code": "https://github.com/romanpoudel/resi-review",
     "src": "https://images.unsplash.com/photo-1575936123452-b67c3203c357?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
   }
 ]
